0.6.4.18
Pull Request 715 use Join-Path instead of "+" in Get-NavContainerPath
Issue 728 allow CommonDesktop for shortcuts on New-BCContainer
Pull Request 726 add -copyAppToSymbolsFolder in Compile-AppInBcContainer

0.6.4.17
Issue #700 Restore-DatabasesInBcContainer will clear the TestFunctions folder to force re-import
BREAKING CHANGE: added mandatory containerName parameter to Replace-DependenciesInAppFile
Issue #692 System.IO.Packaging.Package could not be found. This is fixed by the breaking change above
Detect Windows 10 1909 on host (no generic 1909 yet)
Add retry algorithm to SetupWebClient (as setupWebClient sometimes fails with locking issues)
Issue #710 traefik fails if PublicDnsName doesn't contain a period (.)
Issue #711 Alias Install-BCContainerApp cannot be found
Allow container to be started with -includeAL and -doNotExportObjectsAsText when creating AL project without -useBaseLine

0.6.4.16
New-DesktopShortcut didn't work if the username has special characters
Add support for Windows Insider builds
New-BcContainer would always try to pull the generic image if the image specified didn't exist
New-BcContainer will report whether or not it is running as administrator
Add host.containerhelper.internal to container hosts file for container to be able to connect to services at the host
Add parameter GenerateAppJson to Extract-AppFileToFolder in order to generate a sample app.json based on the app manifest
Add parameter VsixFile to New-BCContainer in order to override the .vsix file in the image at runtime
Display Error if trying to use Run-Tests while Task Scheduler is running

0.6.4.15
Creating a container with -enableTaskScheduler:$false will disable Task Scheduler (if the container has Task Scheduler running per default = Sandbox containers)
Added parameter -recreate on Setup-TraefikContainerForNavContainer to allow recreation of the container (thanks ChrisBlankDe)
In Run-TestsInBCContainer - only change timeout on webapp if needed

0.6.4.14