@@ -2,6 +2,7 @@
 Pull Request 715 use Join-Path instead of "+" in Get-NavContainerPath
 Issue 728 allow CommonDesktop for shortcuts on New-BCContainer
 Pull Request 726 add -copyAppToSymbolsFolder in Compile-AppInBcContainer
+Issue 729 add isolation mode parameter for Setup-TraefikContainerForBcContainers
 
 0.6.4.17
 Issue #700 Restore-DatabasesInBcContainer will clear the TestFunctions folder to force re-import
